# swimnetworks-rs

./: CONTRIBUTORS  Cargo.toml  LICENSE  README.md
examples/: README.md  classification.rs  random_feature_polynomial_regression.rs  regression.rs  swim_regression.rs
src/: activation.rs  data.rs  layer.rs  lib.rs  linear.rs  main.rs  model.rs  sample.rs  sampler.rs
src/model/: config.rs  fit.rs  layer.rs  sample.rs
src/sampler/: config.rs  random_feature.rs  swim.rs
src/sampler/random_feature/: config.rs  sampler.rs
src/sampler/swim/: config.rs  sampler.rs
tests/: model_test.rs  random_feature_sampler_test.rs  swim_sampler_test.rs
